welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:8: error: ')' expected but '=' found.
	if ( (a % 5) = ( b % 5 ) ) {
                     ^maxMod5:8: error: illegal start of simple expression
	if ( (a % 5) = ( b % 5 ) ) {
                                 ^